--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 
 
+<script>
   const firebaseConfig = {
   apiKey: "AIzaSyBAi-tPbnAxlyF4-GkGrL9_ulfcwI0O01k",
   authDomain: "nasmc-lsafety.firebaseapp.com",
@@ -36,10 +37,10 @@
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
-
+</script>
 
   <script>
-    var serviceWorkerVersion = '2890261117';
+    var serviceWorkerVersion = '3668318482';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
